fix: update the alignment of the notification method

--- a/src/app/features/notification/notification-settings/notification-settings.component.scss
+++ b/src/app/features/notification/notification-settings/notification-settings.component.scss
@@ -102,6 +102,10 @@
   width: 80%;
 }
 
+.notification-rule-method {
+  width: 68%;
+}
+
 .coming-soon-label {
   color: colors.$inactive;
   margin-left: 10px;
